HSEARCH-4873 Test Hibernate Search against JDK 22